[package]
name = "lens_sdk"
description = "An SDK for writing bi-directional, wasm based, LensVM transformations in Rust"
version = "0.8.1"
edition = "2024"
readme = "../README.md"
repository = "https://github.com/sourcenetwork/lens"
license-file = "../LICENSE"

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"
